# multi-agent-research-assistant

./: .gitignore  README.md  graph.py  main.py  models.py  pyproject.toml
agents/: __init__.py  critic.py  planner.py  searcher.py  writer.py
config/: __init__.py  llm.py  settings.py
evals/: eval_suite.py  test_agents.py
memory/: __init__.py  store.py
tools/: __init__.py  search.py
ui/: __init__.py  api.py  app.py
