[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-research"
version = "0.1.0"
description = "Multi-agent research assistant using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "tavily-python>=0.5.0",
    "chromadb>=0.5.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.39.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
    "langsmith>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "rich>=13.0.0",
    "google-generativeai>=0.8.0",
]

[tool.setuptools]
packages = ["agents", "config", "memory", "tools", "ui", "evals"]

[tool.ruff]
line-length = 100
target-version = "py310"
